starlark-rust/starlark_syntax/src/syntax/grammar_tests/error_chained_comparison.golden
# @generated
# To regenerate, run:
# ```
# STARLARK_RUST_REGENERATE_GOLDEN_TESTS=1 cargo test -p starlark --lib
# ```

Program:
0 <= 1 < 2

Error:
error: Parse error: unexpected symbol '<' here, expected one of "\n", "%=", "&=", ")", "*=", "+=", ",", "-=", "//=", "/=", ":", ";", "<<=", "=", ">>=", "]", "^=", "and", "else", "for", "if", "or", "|", "|=" or "}"
 --> error_chained_comparison:1:8
  |
1 | 0 <= 1 < 2
  |        ^
  |


Program:
a == b != c

Error:
error: Parse error: unexpected symbol '!=' here, expected one of "\n", "%=", "&=", ")", "*=", "+=", ",", "-=", "//=", "/=", ":", ";", "<<=", "=", ">>=", "]", "^=", "and", "else", "for", "if", "or", "|", "|=" or "}"
 --> error_chained_comparison:1:8
  |
1 | a == b != c
  |        ^^
  |


Program:
a < b > c

Error:
error: Parse error: unexpected symbol '>' here, expected one of "\n", "%=", "&=", ")", "*=", "+=", ",", "-=", "//=", "/=", ":", ";", "<<=", "=", ">>=", "]", "^=", "and", "else", "for", "if", "or", "|", "|=" or "}"
 --> error_chained_comparison:1:7
  |
1 | a < b > c
  |       ^
  |


Program:
a in b in c

Error:
error: Parse error: unexpected keyword 'in' here, expected one of "\n", "%=", "&=", ")", "*=", "+=", ",", "-=", "//=", "/=", ":", ";", "<<=", "=", ">>=", "]", "^=", "and", "else", "for", "if", "or", "|", "|=" or "}"
 --> error_chained_comparison:1:8
  |
1 | a in b in c
  |        ^^
  |
